Collada-to-pdxmesh conversion features.
- Model viewer
- Mesh conversion via Three.js
- Some screenshots
- Updated bower items (for easier editing by others)

--- a/index.html
+++ b/index.html
@@ -48,12 +48,17 @@
 	<script src="bower_components/angular-mousewheel/mousewheel.js"></script>
 	<script src="bower_components/angular-pan-zoom/bin/panzoom.min.js"></script>
 
+	<script src="bower_components/three.js/three.min.js"></script>
+	<script src="bower_components/ColladaLoader/index.js"></script>
+	<script src="bower_components/DDSLoader/index.js"></script>
+
 	<script src="js/tga.js"></script>
 
 	<script src="js/modService.js"></script>
 	<script src="js/mapAnalyzeService.js"></script>
 	<script src="js/pdxDataService.js"></script>
 	<script src="js/pdxScriptService.js"></script>
+	<script src="js/rendererService.js"></script>
 	
 	<script src="js/index.js"></script>
 </body>
