--- a/content.inspect.file.html
+++ b/content.inspect.file.html
@@ -1,5 +1,10 @@
 <h2>{{node.name}} <span class="loading-icon" ng-class="{'icon-animate': loading}"></h2>
 
+<div ng-if="node.fileType == 'collada'">
+	<button type="button" class="btn btn-primary" ng-click="convertToPdxmesh()">Convert to .mesh</button>
+	<button type="button" class="btn btn-primary" ng-click="createBlankAnim()">Create blank .anim</button>
+</div>
+
 <dl>
 	<dt>Full path:</dt><dd>{{node.path}}</dd>
 	<dt>Size:</dt><dd>{{node.metadata.size || '?'}} bytes</dd>
@@ -14,6 +19,21 @@
 	<img ng-src="{{node.image.src}}" style="max-width: 100%">
 </div>
 
+<div class="btn-group btn-group-xs" ng-if="viewScene">
+	<button type="button" class="btn btn-default" btn-checkbox ng-model="viewScene.viewConfig.showSkeletons">Skeleton</button>
+	<button type="button" class="btn btn-default" btn-checkbox ng-model="viewScene.viewConfig.showMeshes">Mesh</button>
+	<button type="button" class="btn btn-default" btn-checkbox ng-model="viewScene.viewConfig.showColliders">Colliders</button>
+	<button type="button" class="btn btn-default" btn-checkbox ng-model="viewScene.viewConfig.showSpotlights">Spotlights</button>
+</div>
+<div class="btn-group btn-group-xs" ng-if="viewScene">
+	<button type="button" class="btn btn-default" ng-click="zoomIn()"><span class="glyphicon glyphicon-plus"></span></button>
+	<button type="button" class="btn btn-default" ng-click="zoomOut()"><span class="glyphicon glyphicon-minus"></span></button>
+</div>
+
+<div id="3dview">
+	
+	
+</div>
 
 <div ng-if="node.treeData != null">
 	<h3>Data structure</h3>
@@ -23,7 +43,7 @@
 			<span class="glyphicon" data-nodrag ng-class="{'glyphicon-none': (!dataNode.subNodes.length), 'glyphicon-chevron-right': (dataNode.subNodes.length) && collapsed, 'glyphicon-chevron-down': dataNode.subNodes.length && !collapsed}" ng-click="this.toggle()"></span>
 			<span class="datatree-item-name" ng-click="this.toggle()"><span class="glyphicon glyphicon-{{dataNode.icon ? dataNode.icon : 'folder-close'}}"></span>{{::dataNode.name}}</span>
 			<span class="datatree-item-type" ng-show="node.treeDataType != 'simple'">{{::dataNode.type}}</span>
-			<span class="datatree-item-data" ng-show="dataNode.data">{{::dataSample(dataNode.data, node.treeDataType)}}</span>
+			<span class="datatree-item-data" ng-show="dataNode && dataNode.data !== null">{{::dataSample(dataNode.data, node.treeDataType)}}{{::nodeData.nullByteString ? ' (null byte)' :''}}</span>
 			<span class="datatree-item-comments" ng-show="dataNode.comments"><span ng-repeat="c in dataNode.comments | commentFilter track by $index"># {{c}}<br /></span></span>
 		</div>
 		<ol ng-class="{hidden: collapsed}" ui-tree-nodes ng-model="dataNode.subNodes">
@@ -40,9 +60,11 @@
 			<li ng-repeat="dataNode in node.treeData.subNodes" ui-tree-node ng-include="'datanodes_renderer.html'" data-collapsed="true"></li>
 		</ol>
 	</div>
-	
+
+<!-- 	
 	<h4>In JSON <div class="btn-group"><button class="btn btn-xs btn-default" ng-model="showJson" btn-radio="true">Show</button><button class="btn btn-xs btn-default" ng-model="showJson" btn-radio="false">Hide</button></div></h4>
 	<div class="datatext" ng-show="showJson">{{node.treeData | jsonFiltered: ['comments', 'icon', 'depth']:'    '}}</div>
+-->
 </div>
 
 <div ng-if="node.textData != null">
