--- a/content.inspect.map.html
+++ b/content.inspect.map.html
@@ -4,11 +4,11 @@
 		<div ui-layout="{ flow : 'row'}" style="overflow: hidden;">
 			<div ui-layout-container size="60px" style="overflow: hidden;">
 				<div class="window-box">
-					<h2>Map tool <span class="loading-icon" ng-class="{'icon-animate': loading}"></span> 
-						<button type="button" class="btn btn-primary" ng-click="loadSeasMap()">Analyze seas.png</button>
-						<button type="button" class="btn btn-primary" ng-click="loadNumberedMap()">Analyze provinces.bmp</button> 
+					<h2>Map tool <span class="loading-icon" ng-class="{'icon-animate': loading}"></span>
+						<button ng-if="hasSeasPng" type="button" class="btn btn-primary" ng-click="loadSeasMap()">Analyze seas.png</button>
+						<button type="button" class="btn btn-primary" ng-click="loadNumberedMap()">Analyze provinces.bmp</button>
 						<button type="button" class="btn btn-primary" ng-click="compareWithDefinitions()">Compare with current</button>
-						
+
 						<div class="map-action-bar">
 							Options
 							<div class="btn-group">
@@ -16,15 +16,15 @@
 								<label class="btn btn-success" ng-model="options.highLight" btn-checkbox>Highlight</label>
 								<label class="btn btn-success" ng-model="options.showLabels" btn-checkbox>Labels</label>
 							</div>
-							Views 
+							Views
 							<div class="btn-group">
 								<label class="btn btn-success" ng-model="view" btn-radio="'provinces'">Provinces</label>
-								<label class="btn btn-success" ng-model="view" btn-radio="'seas'">Seas</label>
+								<label ng-if="hasSeasPng" class="btn btn-success" ng-model="view" btn-radio="'seas'">Seas</label>
 								<label class="btn btn-success" ng-model="view" btn-radio="'countries'">Countries</label>
 							</div>
 						</div>
 					</h2>
-				</div>				
+				</div>
 			</div>
 		 	<div ui-layout-container>
 				<div class="window-body">
@@ -67,6 +67,6 @@
 				</div>
 			</div>
 		</div>
-	</div>		
+	</div>
 </div>
 </div>
