--- a/content.inspect.html
+++ b/content.inspect.html
@@ -23,7 +23,7 @@
 			</ol>
 		</script>
 
-		<div ui-tree data-drag-enabled="false">
+		<div ui-tree data-drag-enabled="false" data-empty-place-holder-enabled="false">
 			<ol ui-tree-nodes ng-model="modService.data.fileSystem.root.folders">
 				<li ng-repeat="node in modService.data.fileSystem.root.folders" ui-tree-node ng-include="'nodes_renderer.html'" data-collapsed="true"></li>
 			</ol>
