--- a/content.inspect.file.html
+++ b/content.inspect.file.html
@@ -33,6 +33,7 @@
 	<span>Meshes: {{viewScene.viewConfig.viewObject.meshCount}} - Triangles: {{viewScene.viewConfig.viewObject.triangleCount}} - Bones: {{viewScene.viewConfig.viewObject.boneCount}}</span>
 
 	<div id="3dview">
+		<div class="view3d-labels"></div>
 	</div>
 </div>
 
