--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 	<link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" ng-controller="TopBar">
 		<div class="navbar-header pull-left">
-			<a class="navbar-brand" href="#">The JoroDox <span>v0.1</span></a>
+			<a class="navbar-brand" href="#">The JoroDox <span>v{{manifest.version}}</span></a>
 		</div>
 		<div id="navbar">
 			<ul class="nav navbar-nav" track-active>
