--- a/content.about.html
+++ b/content.about.html
@@ -13,6 +13,13 @@
 
 	<h3>Changelog</h3>
 
+	<h4>v0.4.0 (2015-02-05)</h4>
+	<h5>Changes</h5>
+	<ul>
+		<li>Added pdx animation reading &amp; export from collada</li>
+		<li>Can select pdx animations from same dir or subdirs</li>
+	</ul>
+
 	<h4>v0.3.1 (2015-02-02)</h4>
 	<h5>Changes</h5>
 	<ul>
