--- a/content.about.html
+++ b/content.about.html
@@ -13,6 +13,13 @@
 
 	<h3>Changelog</h3>
 
+	<h4>v0.5.0 (2015-02-08)</h4>
+	<h5>Changes</h5>
+	<ul>
+		<li>Better collada animation import options</li>
+		<li>Configurable shaders & textures for PDXmeshes</li>
+	</ul>
+
 	<h4>v0.4.0 (2015-02-05)</h4>
 	<h5>Changes</h5>
 	<ul>
