* Add support for multiple UV texture layers * Removed some old code * Bone-count weight mapping fix

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	<script src="bower_components/angular-mousewheel/mousewheel.js"></script>
 	<script src="bower_components/angular-pan-zoom/bin/panzoom.min.js"></script>
 
-	<script src="bower_components/three.js/three.js"></script>
+	<script src="bower_components/three.js/three.min.js"></script>
 	<script src="bower_components/ColladaLoader/index.js"></script>
 	<script src="bower_components/DDSLoader/index.js"></script>
 
