--- a/content.about.html
+++ b/content.about.html
@@ -13,6 +13,12 @@
 
 	<h3>Changelog</h3>
 
+	<h4>v0.5.1 (2015-02-09)</h4>
+	<h5>Changes</h5>
+	<ul>
+		<li>Add support for multiple UV layers.</li>
+	</ul>
+
 	<h4>v0.5.0 (2015-02-08)</h4>
 	<h5>Changes</h5>
 	<ul>
