- Bower components update - Map province select, data view (EU4) - More mod data loading (EU4: countries, localisation) - Experimentary localisation save

--- a/content.about.html
+++ b/content.about.html
@@ -13,6 +13,13 @@
 
 	<h3>Changelog</h3>
 
+	<h4>v0.6.0 (2015-02-22)</h4>
+	<h5>Changes</h5>
+	<ul>
+		<li>Province selection for map view</li>
+		<li>Data views for map interface (EU4 only)</li>
+	</ul>
+
 	<h4>v0.5.1 (2015-02-09)</h4>
 	<h5>Changes</h5>
 	<ul>
