--- a/app/app.html
+++ b/app/app.html
@@ -7,6 +7,7 @@
       default-src 'self' http://localhost:1212 ws://localhost:1212;
       script-src 'unsafe-inline' 'unsafe-eval' 'self' http://localhost:1212 file://*/dll/renderer.dev.dll.js file://*;
       style-src 'unsafe-inline' blob: http://localhost:1212 https://fonts.googleapis.com file://*;
+      img-src 'self' data: http://localhost:1212 ws://localhost:1212;
       font-src http://localhost:1212  https://fonts.gstatic.com file://*
     ">
     <script>
