--- a/app/app.html
+++ b/app/app.html
@@ -6,9 +6,9 @@
     <meta http-equiv="Content-Security-Policy" content="
       default-src 'self' http://localhost:1212 ws://localhost:1212;
       script-src 'unsafe-inline' 'unsafe-eval' 'self' http://localhost:1212 file://*/dll/renderer.dev.dll.js file://*;
-      style-src 'unsafe-inline' blob: http://localhost:1212 https://fonts.googleapis.com file://*;
+      style-src 'unsafe-inline' blob: http://localhost:1212 file://*;
       img-src 'self' data: http://localhost:1212 ws://localhost:1212;
-      font-src http://localhost:1212  https://fonts.gstatic.com file://*
+      font-src http://localhost:1212 file://* data:
     ">
     <script>
       (function() {
@@ -21,7 +21,6 @@
         }
       }());
     </script>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
