--- a/app/background.html
+++ b/app/background.html
@@ -6,8 +6,8 @@
     <meta http-equiv="Content-Security-Policy" content="
       default-src 'self' http://localhost:1212 ws://localhost:1212;
       script-src 'unsafe-inline' 'unsafe-eval' 'self' http://localhost:1212 file://*/dll/renderer.dev.dll.js file://*;
-      style-src 'unsafe-inline' blob: http://localhost:1212 https://fonts.googleapis.com file://*;
-      font-src http://localhost:1212  https://fonts.gstatic.com file://*
+      style-src 'unsafe-inline' blob: http://localhost:1212 file://*;
+      font-src http://localhost:1212 file://* data:
     ">
     <script>
       (function() {
