Update extension to be compatible with Chrome extension library changes.
- Updated to Google extension manifest v3
- Updated to new 'File System Access API' (https://developer.mozilla.org/en-US/docs/Web/API/File_System_Access_API)

--- a/content.about.html
+++ b/content.about.html
@@ -13,6 +13,14 @@
 
 	<h3>Changelog</h3>
 
+	<h4>v0.8.0 (2023-07-11)</h4>
+	<h5>Changes</h5>
+	<ul>
+		<li>The undead Jorodox tool rises after 8 years!?! (yes, only to keep it a bit alive, no functional changes)</li>
+		<li>Changed to file-system access to <a href="https://developer.mozilla.org/en-US/docs/Web/API/File_System_Access_API" target="_blank">'File System Access API'</a> to be compatible with Google Chrome extension changes</li>
+		<li>Updated to <a href="https://developer.chrome.com/docs/extensions/mv3/intro/" target="_blank">Manifest V3</a> for Chrome Extensions</li>
+	</ul>
+
 	<h4>v0.7.0 (2015-05-05)</h4>
 	<h5>Changes</h5>
 	<ul>
