- Update version nr for update

--- a/content.about.html
+++ b/content.about.html
@@ -13,6 +13,12 @@
 
 	<h3>Changelog</h3>
 
+	<h4>v0.8.1 (2023-07-12)</h4>
+	<h5>Changes</h5>
+	<ul>
+		<li>Make the extension icon clickable (now that this tool no longer is a 'Chrome App')</li>
+	</ul>
+
 	<h4>v0.8.0 (2023-07-11)</h4>
 	<h5>Changes</h5>
 	<ul>
